20190610
========
#41651 - Documentation error in user's manual, connection to microsoft sharepoint online appendix
#43212 - The same token is saved in the "old token" and "current token" fields within the token cache

20190125
========
#41479 - Added profile errorprone to execute error prone
#41478 - Check and fix errors and CVE with error-prone and dependency check

20181213
========
#40795 - OAuth credentials must have higher priority than basic authentication credentials
#40892 - OAuth2 headers not being sent to the service in some scenarios
#41003 - Support for adding extra parameters to the HTTP requests that refresh an expired access token

20180903
========
#39048 - Client secret for OAuth2 should be a hidden parameter
#39070 - Authentication cache for OAuth not working as expected

20180820
========
#29775 - OData 2 wrapper authentication pass-through
#28433 - OAuth support in OData wrapper

20180801
========
#38705 - NTLM authentication not working properly - Changed version of odata4j-denodo

20180529
========
#35770 - Custom header support for OData 2 Wrapper

20180516
========
#37483 - OData 2 Wrapper contains code that can lead to a StackOverflowError

20180228
========
#36217 - Improve parsing of responses with errors that contain no body.

20170706
========
#33141 - entity sets not being correctly identified at EdmDataServices.findEdmEntitySet(...) when the
         entity set's HREF does not correspond to the entity set name.
#33142 - odata4j wrongly building request URL for pages 2 and further.

20170404
========
#31779 - Entity name and href can be different
#31775 - Error updating an entry

20161222
========
#30519 - Improved reaction at response fields that don't match the projected fields.

20160922
========
#28979 - Update httpclient version and improve tracing log

20160909
========
#28771 - Modify artifact name of Denodo OData2 Wrapper to "denodo-odata2-wrapper"
#20168 - Sharepoint integration: limit the number of relationships to expand
