@@ -30,7 +30,7 @@
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
 	<description>${project.artifactId}</description>
-    <version>20190610</version>
+    <version>20191112</version>
     <properties>
         <java.version>1.8</java.version>
         <errorprone.javac.version>9+181-r4173-1</errorprone.javac.version>
