@@ -30,7 +30,7 @@
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
 	<description>${project.artifactId}</description>
-    <version>20190905</version>
+    <version>20191112</version>
     <!-- *************************** -->
     <!-- PROFILES -->
     <!-- *************************** -->
