@@ -30,7 +30,8 @@
         <include>LICENSE.txt</include>
         <include>NOTICE.txt</include>
         <include>RELEASE_NOTES.txt</include>
-		<include>README_DOCS.txt</include> 
+		<include>README_DOCS.txt</include>
+        <include>MIGRATING_20191112.txt</include>
       </includes>
     </fileSet>
   </fileSets>
